2004-07-20  Pascal Giard  <evilynux@yahoo.com>

	* src/start_tuxkart.cxx (cmdLineHelp): - Now has its own function.
	(main): - Added fullscreen, version, noStartScreen and nbrPlayers.
	- Display error message on invalid command line argument.
	- StartScreen is shown unless fullscreen is specified.
	(startScreen):
	- Added arguments to the function, needed for cmdLine options.

2004-07-18  Pascal Giard  <evilynux@yahoo.com>

	* src/start_tuxkart.cxx (main):
	- Added support for screen mode selection at the command line.
	- Added --noBorder, hopefully will become --fullscreen.
	- Small fixes in messages output.

2004-07-16  Pascal Giard  <evilynux@yahoo.com>

	* src/start_tuxkart.cxx (main):
	- Added support for command line parameters: track, nbrLaps,
	  reverse, mirror and help.
	- Shortened the main(), created two new functions: startScreen()
	  and initTuxKart().
